--- a/package.json
+++ b/package.json
@@ -4,13 +4,14 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beautiful": "lint-staged",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resources/scss/ --output src/public/css/",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/AmeeYuki/nodejs_blog.git"
+    "url": "git+https://github.com/AmeeYuki/nodejsnpm run beautiful_blog.git"
   },
   "keywords": [
     "ame",
@@ -23,11 +24,19 @@
     "url": "https://github.com/AmeeYuki/nodejs_blog/issues"
   },
   "homepage": "https://github.com/AmeeYuki/nodejs_blog#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --trailing-comma all  --tab-width 4 --write"
+  },
+
   "dependencies": {
     "express": "^4.18.2",
     "express-handlebars": "^7.1.2",
+    "husky": "^8.0.3",
+    "lint-staged": "^15.2.0",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
+    "save-dev": "^0.0.1-security"
   },
   "devDependencies": {
     "morgan": "^1.10.0"
