--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express-handlebars": "^7.1.2",
     "husky": "^8.0.3",
     "lint-staged": "^15.2.0",
+    "mongoose": "^8.0.3",
     "node-sass": "^9.0.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
